# HexGo

./: .gitignore  .tmp-broot-conf.hjson  .tmp-broot-verbs.hjson  .tmp.ghostty.config  .tmp.zshrc  AGENTS.md  CLAUDE.md  README.md  icon.svg.import  project.godot  技术设计文档.md
native/: Cargo.toml  README.md  hexgo_native.gdextension  hexgo_native.gdextension.example  run_ark_pairwise.sh
native/crates/hexgo-eval/: Cargo.toml
native/crates/hexgo-eval/src/: main.rs
native/examples/: simple_strategy.py
native/generated-strategies/: STRATEGY_PROMPT.md  codex_strategy.py  glm_4_7_strategy.py  glm_5_1_strategy.py  gpt_oss_120b_strategy.py  kimi_k2_5_strategy.py  run_five_strategy_multiradius.sh  run_five_strategy_r5.sh  run_five_strategy_round_robin.sh
scenes/: Board.tscn  HexCell.tscn  Main.tscn  Piece.tscn
scenes/UI/: EndGameDialog.tscn  HUD.tscn  MatchSetupDialog.tscn  PassButton.tscn
scripts/: Board.gd  Board.gd.uid  BoardView.gd  Main.gd  Main.gd.uid
scripts/agents/: AgentFactory.gd  BaseAgent.gd  CandidateGenerator.gd  HeuristicAgent.gd  LLMAgent.gd  RLAgent.gd  RemoteAgent.gd
scripts/ai/: AIController.gd  AIHeuristics.gd  BaseAIStrategy.gd  EasyAIStrategy.gd  HardAIStrategy.gd  MatchConfig.gd  MediumAIStrategy.gd
scripts/core/: ActionCodec.gd  BaseEngineBridge.gd  CaptureResolver.gd  CaptureResolver.gd.uid  EngineBridgeFactory.gd  EngineProtocol.gd  GDScriptEngineBridge.gd  GameState.gd  (+14 more)
tests/: debug_preload_native.gd  export_shared_engine_fixtures.gd  test_ai.gd  test_core.gd  test_core.gd.uid  test_game_flow.gd  test_smoke.gd  test_smoke.gd.uid
(+39 files in other folders)
